# GLToolset

./: .gdbinit  .gitmodules  CMakeLists.txt  printers.py
.github/workflows/: cmake.yml
cache/: CMakeLists.txt  make_cache.cpp  strip.cpp
flatbuffers/: CMakeLists.txt
flatbuffers/common/: aabb.idl  aabb.idl.fbs  debug.fbs  math.idl.fbs  resource.idl.fbs  resource_var.fbs  transform.idl  transform.idl.fbs
flatbuffers/graphics/: cprogram.fbs  glenum.idl.fbs  imgui.idl.fbs  model_common.fbs  model_single.fbs  program.fbs  texture.fbs  texture_flags.idl  ui_frame.fbs  ui_internal.idl.fbs  vertex.fbs  vertex_type.idl
frame_designer/: CMakeLists.txt  frame_designer.cpp
glmod/: CMakeLists.txt  make_glmod.cpp
gltex/: CMakeLists.txt  make_gltex.cpp
gltex_view/: CMakeLists.txt  frame_buffer.hpp  gltex_view.cpp  render_aabb.hpp  render_box.hpp  render_cube.hpp  render_model.hpp  render_ts.hpp  scene_program.hpp  shader_compiler.hpp  tex_format_ref.hpp  texture.hpp
gltex_view/res/: default.gspr  default.spl  light.gtb0  light.gth  light.gts0  light.gtte  light.ppe
gltex_view/res/core/: default.nut
gltex_view/res/editor/: aabb_single_model.nut  box_vertex.nut  canvas.nut  cube_vertex.nut  density.nut  light_single_model.nut  tangent_space_vis.nut  texture_cube_albedo.nut  texture_cube_normal.nut
gltex_view/res/shaders/: camera.nut  dualquat.nut  point_light.nut  position.nut  quat.nut  simple_model.nut  spot_light.nut  tangent_space.nut  uvs.nut  vert_cube.nut  vert_sprite.nut  visualize_ts.nut
gltex_view/shaders/: CMakeLists.txt  shader_classes.hpp
gltex_view/shaders/common/: common.h.glsl  common.vert  defs.glsl  light_omni.frag  light_omni.h.glsl  light_omni.vert  ts_normal.vert
gltex_view/shaders/single_texture/: main.h.glsl  main_albedo.frag  main_normal.frag
include/: tex.hpp
include/common/: aabb.hpp  array.hpp  camera.hpp  constants.hpp  core.hpp  error.hpp  local_pointer.hpp  pointer.hpp  resource.hpp  resource_hash.hpp  string.hpp  transform.hpp  variant.hpp
include/graphics/: frame_buffer.hpp  glenum.hpp  model_single.hpp  pipeline.hpp  post_process.hpp  program.hpp  sampler.hpp  texture.hpp  ui_frame.hpp  vertex.hpp  vertex_type.hpp
include/graphics/detail/: model_single.hpp  program.hpp  texture.hpp  vertex_array.hpp
include/script/: funcproto.hpp  scriptapi.hpp
include/script/detail/sqbase/: sqconfig.h  sqobject.h  squirrel.h
include/utils/: builder.hpp  converters.hpp  debug.hpp  fixer.hpp  flatbuffers.hpp  instancetm_builder.hpp  playground.hpp  reflect.hpp  reflect_impl.hpp  resource_report.hpp  shader_preprocessor.hpp  texture.hpp
include/utils/converters/: texture_compiler.hpp
nutty_shader/: CMakeLists.txt  compile_nutty.cpp
src/common/: camera.cpp  constants.cpp  registry.cpp  resource.cpp
src/cshaders/: 2d_meta_balls.cpp  README.md  camera.hpp  dualquat.hpp  point_light.hpp  position.hpp  quat.hpp  shader_types.hpp  simple_model.cpp  spot_light.hpp  tangent_space.hpp  transpile.cpp  uvs.hpp  vert_cube.hpp  vert_sprite.hpp  visualize_ts.cpp
src/graphics/: frame_buffer.cpp  model_single.cpp  pipeline.cpp  post_process.cpp  program.cpp  reflect.cpp  sampler.cpp  texture.cpp  ui_frame.cpp  vertex.cpp
src/motion/: curvebatch_evaluate.cpp
src/script/: CMakeLists.txt  autogen.cpp  funcproto.cpp  resource_classes.cpp  resource_classes.hpp  resource_compiler.cpp
src/script/sqbase/: sqapi.cpp  sqbaselib.cpp  sqclass.h  sqclosure.h  sqcompiler.cpp  sqcompiler.h  sqdebug.cpp  sqfuncproto.h  sqfuncstate.cpp  sqfuncstate.h  sqobject.cpp  sqopcodes.h  sqstate.cpp  sqstate.h  sqstring.h  sqtable.cpp  sqtable.h  squserdata.h  sqvm.cpp
src/scripts/: funcproto.cpp  sqapi.cpp  sqarray.h  sqbaselib.cpp  sqclass.cpp  sqclosure.h  sqcompiler.cpp  sqfuncproto.h  sqfuncstate.cpp  sqlexer.h  sqstring.h  sqtable.cpp  sqtable.h  sqvm.cpp  sqvm.h
src/shaders/: shader_classes.hpp
src/shaders/basics/: aabb_cube.frag  simple_cube.vert  simple_sprite.vert  ts_normal.frag  ts_normal.geom  ts_normal.vert  viewport.vert
src/shaders/common/: common.frag  common.h.glsl  common.vert  defs.glsl  dual_quat.glsl  light_omni.frag  light_omni.h.glsl  light_omni.vert  quat.glsl  ts_normal.frag  ts_normal.vert  uvs.vert
src/shaders/light/: main.frag  main.vert
src/shaders/post_process/: combine.frag  glow.glsl  glow_horizontal.frag  glow_vertical.frag
src/shaders/simple_model/: main.frag  main.vert
src/shaders/single_texture/: main.h.glsl  main.vert  main_albedo.frag  main_normal.frag
src/utils/: converters.cpp  debug.cpp  image.cpp  md2.cpp  playground.cpp  reflect.cpp  reflect_graphics.cpp  shader_preprocessor.cpp
src/utils/converters/: CMakeLists.txt  converters.cpp  image.cpp  md2.cpp  texture_compiler.cpp
src/utils/reflect/: CMakeLists.txt  graphics.cpp  reflect.cpp  script.cpp  utils.cpp
tests/: CMakeLists.txt  test_playground.cpp
